# PEA

./: .gitignore  CMakeLists.txt  main.cpp
TSP/BaB/BFS/: BFS.cpp  BFS.h
TSP/BaB/DFS/: DFS.cpp  DFS.h
TSP/BaB/LCFS/: LCFS.cpp  LCFS.h
TSP/NearestNeighbour/: NearestNeighbour.cpp  NearestNeighbour.h
TSP/RandomNeighbour/: RandomNeighbour.cpp  RandomNeighbour.h
TSP/TSPSolver/: TSPSolver.cpp  TSPSolver.h
TSP/bruteForce/: BruteForce.cpp  BruteForce.h
TSP/pomocnicze/: usunWspolne.cpp  usunWspolne.h
TSP/random/: RandomTSP.cpp  RandomTSP.h
Tree/Node/: Node.cpp  Node.h
config/configClass/: Config.cpp  Config.h
config/configFiles/: config.json
data/data_files/: 12nodes.txt  13nodes.txt  14nodes.txt  4nodes.txt  6nodes.txt  7nodes.txt  8nodes.txt  test.txt
data/data_loader/: DataLoader.cpp  DataLoader.h
data/output/: 08_10_21_22.txt  09_10_20_35.txt  123.txt  13_10.txt  kajhsdjk.txt  output.txt  test.txt  wera3000.txt  windows.txt
